...
            app:destination="@+id/nav_browse_event" />
        <action
            android:id="@+id/action_homeFragment_to_adminBrowseProfilesFragment"
            app:destination="@+id/nav_browse_profiles" />
        <action
            android:id="@+id/action_nav_home_to_nav_invitations"
            app:destination="@id/nav_invitations" />
        <action
            android:id="@+id/action_nav_home_to_scan_qr_code"
            app:destination="@id/scan_qr_code" />
        <action
            android:id="@+id/action_nav_home_to_nav_facility"
            app:destination="@id/nav_facility" />
...
    </fragment>

    <fragment
        android:id="@+id/invitation_fragment"
        android:name="com.example.employ_events.ui.fragment.invitation.InvitationFragment"
        tools:layout="@layout/event_invitation"
        android:label="Invitation">
        <action
            android:id="@+id/action_invitation_fragment_to_nav_invitations"
            app:destination="@id/nav_invitations" />
        <action
            android:id="@+id/action_invitation_fragment_to_nav_home"
            app:destination="@id/nav_home" />
...
